# MidiLearn

./: CMakeLists.txt  MidiLearn.cbp  README  run.bat
cmake/modules/: FindTSE3.cmake
midilearn/tags/rel0_5/: README  run.bat
midilearn/tags/rel0_5/release/win32/: midilearn.iss
midilearn/tags/rel0_5/site/: style.css
midilearn/tags/rel0_5/src/: Dlg_Port.cpp  Dlg_Port.h  MidiLearnMain.h  ctl_miditrack.cpp  ctl_miditrack.h
midilearn/tags/rel_0.4/res/: resource.rc
midilearn/tags/rel_0.4/site/: index.html
midilearn/tags/rel_0.4/src/: MidiLearnApp.cpp  MidiLearnMain.cpp  ctl_miditrack.h
midilearn/trunk/: MidiLearn.cbp  MidiLearn.sln  MidiLearnUnix.cbp  MidiLearn_vc.vcproj  run.bat
midilearn/trunk/release/win32/: midilearn.iss
midilearn/trunk/site/: index.html
midilearn/trunk/src/: Dlg_Port.cpp  Dlg_Search.cpp  MidiLearnApp.cpp  MidiLearnApp.h  MidiLearnMain.cpp  MidiLearnMain.h  ctl_miditrack.cpp  ctl_miditrack.h
res/: resource.rc
src/: CMakeLists.txt  Dlg_Search.h  MidiLearnApp.cpp  MidiLearnApp.h  MidiLearnMain.cpp  MidiLearnMain.h  ctl_miditrack.cpp  ctl_miditrack.h
